Fix for a better contrast accessibility

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -282,7 +282,7 @@ body.homepage {
       background-color: $text !important;
     }
   }
-  
+
   .home-hero-banner {
     .hero-body {
       .has-text-right {
@@ -681,7 +681,8 @@ a.image.cc {
     justify-content: center;
     align-items: center;
     background: #f2f2f2;
-    color: $primary;
+//    color: $primary;
+    color: #df011b;
     font: {
       size: 2rem;
       weight: 700;
